question form and calcualte result done

--- a/IQTest/Views/Home/Index.cshtml
+++ b/IQTest/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
             </span>
         </p>
         <div class="main-btn-container center ">
-            <a class="main-btn center">Get Started</a>
+            <a class="main-btn center" asp-action="Test">Get Started</a>
         </div>
     </div>
 
@@ -147,7 +147,7 @@
         </div>
         <div class="col-12 col-lg-5 whatIQ-btn-container wow animate__animated animate__fadeInRight">
             <img class=" whatIQ-img" src="/images/staticImages/blob.png" />
-            <a class=" whatIQ-btn center">Get Started</a>
+            <a class=" whatIQ-btn center" asp-action="Test">Get Started</a>
         </div>
     </div>
 </div>
