--- a/IQTest/Views/Shared/_Layout.cshtml
+++ b/IQTest/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="/css/site.css" rel="stylesheet" />
-
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     @RenderSection("Css", required: false)
 </head>
 <body>
@@ -30,13 +30,14 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link active text-primary" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-primary" aria-current="page"
+                       asp-controller="Home" asp-action="Index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-primary" href="#">Features</a>
+                    <a class="nav-link text-primary" href="#">Get started</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-primary" href="#">Pricing</a>
+                    <a class="nav-link text-primary" asp-controller="ContactUs" asp-action="Index">Contant Us</a>
                 </li>
             </ul>
         </div>
@@ -46,9 +47,9 @@
     @RenderBody()
 
     <footer class="footer pt-3 pb-3">
-        <div class="container">
-            <span class="text-white">&copy; 2020 - The-Idea-Builders</span>
-        </div>
+
+        <span class="text-white ml-4">&copy; 2020 - The-Idea-Builders</span>
+
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -73,7 +74,7 @@
         );
         wow.init();
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
