--- a/IQTest/Views/Shared/Partials/_QuestionForm.cshtml
+++ b/IQTest/Views/Shared/Partials/_QuestionForm.cshtml
@@ -18,7 +18,7 @@
 <br />
 <br />
 <div class="row" style="padding-top:50px;padding-bottom:50px;">
-    <div class="col-6 col-lg-3 col-md-6" style="display:flex;align-items:center;flex-direction:column;">
+    <div class="col-6 col-lg-3 " style="display:flex;align-items:center;flex-direction:column;">
 
         <img src="@Model.Question.Choice1" style="width:160px; height:150px;" />
         <br />
@@ -26,19 +26,19 @@
         <br />
     </div>
 
-    <div class="col-6 col-lg-3 col-md-6" style="display:flex;align-items:center;flex-direction:column;">
+    <div class="col-6 col-lg-3 " style="display:flex;align-items:center;flex-direction:column;">
         <img src="@Model.Question.Choice2" style="width:160px; height:150px;" />
         <br />
         <input type="radio" name="choices" value="@Model.Question.Choice2" id="Choice2" @IsChecked(Model.Question.Choice2) />
         <br />
     </div>
-    <div class="col-6 col-lg-3 col-md-6" style="display:flex;align-items:center;flex-direction:column;">
+    <div class="col-6 col-lg-3 " style="display:flex;align-items:center;flex-direction:column;">
         <img src="@Model.Question.Choice3" style="width:160px; height:150px;" />
         <br />
         <input type="radio" name="choices" value="@Model.Question.Choice3" id="Choice3" @IsChecked(Model.Question.Choice3) />
         <br />
     </div>
-    <div class="col-6 col-lg-3 col-md-6 " style="display:flex;align-items:center;flex-direction:column;">
+    <div class="col-6 col-lg-3 " style="display:flex;align-items:center;flex-direction:column;">
         <img src="@Model.Question.Choice4" style="width:160px; height:150px;" />
         <br />
         <input type="radio" name="choices" value="@Model.Question.Choice4" id="Choice4" @IsChecked(Model.Question.Choice4) />
