--- a/IQTest/Views/Home/Index.cshtml
+++ b/IQTest/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/home/animation.css">
     <link rel="stylesheet" href="/css/home/responsive.css">
 }
-
+@model List<IQTest.Models.User>
 
 <!--- first lock -->
 <div class="row main-container ">
@@ -31,7 +31,11 @@
 </div>
 
 
-
+@{ 
+    var first = Model.GetRange(0, 1).First();
+    var second= Model.GetRange(1, 1).First();
+    var third = Model.GetRange(2, 1).First();
+}
 <!--- top #3 -->
 
 <div class="row center top3-container">
@@ -50,21 +54,21 @@
                 <img src="/images/staticImages/name.png"
                      width="40px" height="40px"
                      class="mr-2">
-                Yazan Hindi
+                @second.Name
             </div>
 
             <div class="card-item">
                 <img src="/images/staticImages/target.png"
                      width="40px" height="40px"
                      class="mr-2">
-                77%
+                @second.Score / 125
             </div>
 
             <div class="card-item">
                 <img src="/images/staticImages/stopwatch.png"
                      width="40px" height="40px"
                      class="mr-2">
-                25:06
+                @second.Time.ToString("MM:ss")
             </div>
 
         </div>
@@ -79,21 +83,21 @@
                 <img src="/images/staticImages/name.png"
                      width="45px" height="40px"
                      class="mr-2">
-                Yazan Hindi
+                @first.Name
             </div>
 
             <div class="card-item">
                 <img src="/images/staticImages/target.png"
                      width="45px" height="45px"
                      class="mr-2">
-                77%
+                @first.Score / 125
             </div>
 
             <div class="card-item">
                 <img src="/images/staticImages/stopwatch.png"
                      width="45px" height="45px"
                      class="mr-2">
-                25:06
+                @first.Time.ToString("MM:ss")
             </div>
 
         </div>
@@ -108,21 +112,21 @@
                 <img src="/images/staticImages/name.png"
                      width="40px" height="40px"
                      class="mr-2">
-                Yazan Hindi
+                @third.Name
             </div>
 
             <div class="card-item">
                 <img src="/images/staticImages/target.png"
                      width="40" height="40"
                      class="mr-2">
-                77%
+                @third.Score / 125
             </div>
 
             <div class="card-item">
                 <img src="/images/staticImages/stopwatch.png"
                      width="40" height="40"
                      class="mr-2">
-                25:06
+                @third.Time.ToString("MM:ss")
             </div>
 
 
@@ -142,7 +146,7 @@
     </div>
     <div class="row justify-content-between ">
         <div class="col-12 col-lg-6 whatIQ-text ml-3">
-            Simple IQ test is a<br /> test
+            Simplly IQ test is a<br /> test
             that Measure your intelligence<br> quotient with some exciting qustions.
         </div>
         <div class="col-12 col-lg-5 whatIQ-btn-container wow animate__animated animate__fadeInRight">
