--- a/IQTest/Views/Shared/_Layout.cshtml
+++ b/IQTest/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-        <a class="navbar-brand ml-2" href="#">
+        <a class="navbar-brand ml-2" asp-controller="Home" asp-action="Index">
             <img src="~/images/staticImages/logo.png" asp-append-version="true" alt="logo" height="50" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                        asp-controller="Home" asp-action="Index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-primary" href="#">Get started</a>
+                    <a class="nav-link text-primary" asp-controller="Home" asp-action="Test">Get started</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-primary" asp-controller="ContactUs" asp-action="Index">Contant Us</a>
