--- a/IQTest/Views/Shared/_Layout.cshtml
+++ b/IQTest/Views/Shared/_Layout.cshtml
@@ -17,6 +17,21 @@
     @RenderSection("Css", required: false)
 </head>
 <body>
+    @{
+        string isActive(string pageName)
+        {
+            string active = ViewData["Active"].ToString();
+            if (pageName == active)
+            {
+                return "active-link";
+
+            }
+            return "";
+        }
+
+
+
+    }
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
         <a class="navbar-brand ml-2" asp-controller="Home" asp-action="Index">
@@ -30,14 +45,14 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link active text-primary" aria-current="page"
+                    <a class="nav-link text-primary @isActive("Home")" aria-current="page"
                        asp-controller="Home" asp-action="Index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-primary" asp-controller="Home" asp-action="Test">Get started</a>
+                    <a class="nav-link text-primary @isActive("GetStarted") " asp-controller="Home" asp-action="Test">Get started</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-primary" asp-controller="ContactUs" asp-action="Index">Contant Us</a>
+                    <a class="nav-link text-primary @isActive("ContactUs")" asp-controller="ContactUs" asp-action="Index">Contant Us</a>
                 </li>
             </ul>
         </div>
