make website responsive for landscap orintaion

--- a/IQTest/Views/Home/Index.cshtml
+++ b/IQTest/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 @model List<IQTest.Models.User>
 
 <!--- first lock -->
-<div class="row main-container ">
+<div class="col-12 row main-container ">
     <div class="get-started-container col-12 col-lg-6">
         <p>
             TEST YOUR
