--- a/IQTest/wwwroot/css/form/question.css
+++ b/IQTest/wwwroot/css/form/question.css
@@ -46,4 +46,9 @@
     .form-container > h1 {
         font-size: 1.1rem;
     }
+    body{
+        width:100vw;
+        overflow-x:hidden;
+    }
 }
+ 
