--- a/IQTest/wwwroot/css/home/scorePage.css
+++ b/IQTest/wwwroot/css/home/scorePage.css
@@ -385,3 +385,10 @@ textarea.input {
         padding: 0.45rem 1.2rem;
     }
 }
+
+
+@media (orientation: landscape) {
+    .big-circle {
+        display: none;
+    }
+}
