--- a/IQTest/wwwroot/css/form/question.css
+++ b/IQTest/wwwroot/css/form/question.css
@@ -55,8 +55,36 @@
     }
 
 
+.navContainer {
+    width: 35px;
+    height: 45px;
+    border: 2px solid #6d6d6d;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    text-decoration: none;
+}
+
+    .navContainer:hover {
+        cursor: pointer;
+    }
+
+.navContainer > .fill {
+    height: 45%;
+    width: 100%;
+    background-color: #898989;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 @media (max-width: 600px) {
-    .form-container > h1 {
+    .form-container > .form-content > h1 {
         font-size: 1.1rem;
     }
 }
