--- a/IQTest/Views/Shared/_Layout.cshtml
+++ b/IQTest/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                        asp-controller="Home" asp-action="Index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-primary @isActive("GetStarted") " asp-controller="Home" asp-action="Test">Get started</a>
+                    <a class="nav-link text-primary @isActive("GetStarted") " asp-controller="Test" asp-action="Index">Get started</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-primary @isActive("ContactUs")" asp-controller="ContactUs" asp-action="Index">Contant Us</a>
