fixing width of test screen

--- a/IQTest/Views/Test/Index.cshtml
+++ b/IQTest/Views/Test/Index.cshtml
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/css/form/question.css">
 }
 
-<div style="display:flex;justify-content:center;align-items:center;flex-direction:column">
+<div style="display:flex;justify-content:center;align-items:center;flex-direction:column;width:100%">
     <br /><br />
     <div class="form-container" id="form-question">
         <div id="timer">
