--- a/IQTest/Views/ContactUs/Index.cshtml
+++ b/IQTest/Views/ContactUs/Index.cshtml
@@ -68,17 +68,17 @@
             <form  method="post" autocomplete="off" id="ContactUsForm">
                 <h3 class="title">Contact us</h3>
                 <div class="input-container">
-                    <input type="text" name="name" class="input" />
+                    <input type="text" name="name" class="input" required/>
                     <label for="">Name</label>
                     <span>Name</span>
                 </div>
                 <div class="input-container">
-                    <input type="email" name="email" class="input" />
+                    <input type="email" name="email" class="input" required/>
                     <label for="">Email</label>
                     <span>Email</span>
                 </div>
                 <div class="input-container">
-                    <input type="tel" name="phone" class="input" />
+                    <input type="tel" name="phone" class="input" required/>
                     <label for="">Phone</label>
                     <span>Phone</span>
                 </div>
