fix responsive style in contact us page

--- a/IQTest/wwwroot/css/contactUs/contactUsPage.css
+++ b/IQTest/wwwroot/css/contactUs/contactUsPage.css
@@ -388,7 +388,7 @@ textarea.input {
 
 
 
-@media (orientation: landscape) {
+@media(orientation: landscape) and (min-width: 481px) and (max-width: 850px) {
     .big-circle {
         display: none;
     }
